# proiect-ss

./: .gitignore  CLAUDE.md  DATABASE_AND_RBAC.md  README.md  start.sh
.github/workflows/: ci.yml  deploy.yml
docs/: ARCHITECTURE.md  DATABASE_AND_RBAC.md  DATA_INGESTION_AND_OCR.md  INFRASTRUCTURE_AND_DEVOPS.md  PHI_FIELDS.md  RBAC.md  REPORTING_AND_DASHBOARD.md  TARA.md
infrastructure/docker/: .env.example  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.security.yml
infrastructure/kubernetes/: README.md  namespace.yaml
infrastructure/mosquitto/: acl.conf  (+1 more)
scripts/: build-images.sh  e2e-smoke-test.py  gen-dev-certs.sh  send_test_image.py  upload-findings.sh
services/api/: .env.example  Dockerfile  Dockerfile.dev  entrypoint.sh  pyproject.toml
services/api/app/: main.py
services/api/app/api/routes/: admin_users.py  alerts.py  audit_log.py  auth.py  documents.py  health.py  metrics.py  reports.py  review.py
services/api/app/core/: audit.py  config.py  crypto.py  jwt_utils.py  limiter.py  middleware.py  passwords.py  security.py
services/api/app/mqtt/: consumer.py
services/api/app/schemas/: audit.py  auth.py  ocr.py  reports.py  review.py  users.py
services/api/app/services/: alert_generator.py  masking.py  ocr_client.py  refresh_tokens.py  report_runner.py  result_poller.py  scheduler.py  storage.py  users.py
services/api/prisma/: schema.prisma
services/api/prisma/migrations/20260503142438_init/: migration.sql
services/api/prisma/migrations/20260505120000_users_refresh_tokens_audit_logs/: migration.sql
services/api/prisma/migrations/20260505120001_document_indexes/: migration.sql
services/api/prisma/migrations/20260507101400_add_reports_alerts/: migration.sql
services/api/scripts/: seed_initial_admin.py
services/api/tests/: conftest.py  test_admin_users.py  test_alerts.py  test_anonymised_export.py  test_audit_log.py  test_auth_routes.py  test_confidence_gate.py  test_crypto.py  test_masking.py  test_metrics_real.py  test_mqtt_consumer.py  test_ocr_schema.py  test_payload_size.py  test_rate_limit.py  test_rbac_matrix.py  test_reports.py  test_security.py  test_storage_encryption.py
services/ocr/: Dockerfile  Dockerfile.dev  Dockerfile.ocr  pyproject.toml
services/ocr/app/: worker.py
services/ocr/app/core/: config.py  engine.py  extractor.py  schemas.py
services/ocr/tests/: test_engine_validation.py  test_extractor.py  test_schema_compat.py  test_worker.py
(+37 files in other folders)
