[project]
name = "medical-ocr-api"
version = "0.1.0"
description = "REST API and MQTT consumer for the medical OCR platform"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.4.0",
    "paho-mqtt>=2.1.0",
    "slowapi>=0.1.9",
    "python-multipart>=0.0.9",
    "httpx>=0.27.0",
    "prisma>=0.15.0",
    "pyjwt[crypto]>=2.9.0",
    "argon2-cffi>=23.1.0",
    "cryptography>=43.0.0",
    "prometheus-fastapi-instrumentator>=7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.6.0",
    "mypy>=1.10.0",
    "cyclonedx-bom>=4.5.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["app"]
branch = true

[tool.coverage.report]
fail_under = 80
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]

[tool.setuptools.packages.find]
# The Prisma client generates a `prisma/` directory that setuptools would
# otherwise treat as a second top-level package, breaking editable installs.
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "B", "S", "C4", "UP"]
ignore = [
    "S101",   # allow asserts in tests
    "B008",   # FastAPI Depends() in defaults is the correct FastAPI pattern
    "S104",   # binding to 0.0.0.0 is intentional for Docker services
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S"]
